2001-02-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (DrawButton):
	(RedrawButtons):
	* fvwm/menus.c (paint_menu):
	* libs/Graphics.c (CreateGradientPixmap):
	(CreateGradientPixmapFromString):
	* fvwm/borders.c (RedrawBorder):
	(RedrawButtons):
	(RedrawTitle):
	(draw_clipped_decorations):
	* fvwm/events.c (HandleExpose):
	Reworked decoration redrawing code so that only the exposed parts are
	redrawn.  This should dramatically reduce flickering during window
	moves. However, Title buttons and titles with Pixmap, TiledPixmap or
	MiniIcon title styles do not fully benefit from the patch.

	* fvwm/misc.c (merge_rectangles):
	new function

2001-02-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (RedrawBorder):
	Do not draw inverted left and right borders on shaded windows
	(RedrawTitle):
	made static

	* fvwm/update.c (apply_window_updates):
	Changes in MaxWindowSize style are handles properly for shaded and
	maximized windows

	* fvwm/style.c (ProcessNewStyle):
	Small values of MaxWindosSize style are no longer ignored

	* fvwm/fvwm.c (InitVariables):
	* fvwm/screen.h (ScreenInfo):
	* fvwm/builtins.c (SetBugOptions):
	* fvwm/events.c (HandleFocusIn):
	suppress focus flickering with application modal Qt dialog windows with
	the FlickeringQtDialogsWorkaround bug option.

2001-02-12  Mikhael Goikhman  <migo@homemail.com>

	* INSTALL.fvwm: document --disable-sm
	* fvwm2.1: update -version description

2001-02-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (MenuInteraction):
	(menu_func):
	zero out mp structure

	* fvwm/functions.c (execute_function):
	fixed parsing of one character commands.
	* fvwm/style.c (ProcessNewStyle):
	added some syntax error messages
	parsing fixes
	* libs/Graphics.c (ParseGradient):
	Parsing fixes
	* libs/Parse.c (CopyToken):
	Corrected typo

2001-02-11  Dan Espen  <dane@mk.telcordia.com>

	* tests/menus/menus.read: Put /tmp in the imagepath for menus test.

2001-02-11  Dominik Vogt  <dominik.vogt@gmx.de>
